--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,11 @@ inputs:
     required: false
     default: "."
 
+  enforce_policy:
+    description: "Enforce security policy (block push if HIGH severity >= 25%)"
+    required: false
+    default: "false"
+
 permissions:
   contents: read
   pull-requests: write
